can load spotify playlist

--- a/frontend/src/components/board/board.component.html
+++ b/frontend/src/components/board/board.component.html
@@ -4,3 +4,4 @@
     <item-list [titleColor]="'bg-blue-500'" [title]="'On Hold'"></item-list>
     <item-list [titleColor]="'bg-green-500'" [title]="'Complete'"></item-list>
 </div>
+<button (click)="getPlaylist()">load playlist</button>
