--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -1,1 +1,1 @@
-<button mat-button (click)="redirectToLogin()">Open dialog</button>
+<button mat-button (click)="loginToSpotify()">Open dialog</button>
