--- a/frontend/src/components/board/board.component.html
+++ b/frontend/src/components/board/board.component.html
@@ -3,8 +3,8 @@
     <item-list [titleColor]="'bg-yellow-500'" [title]="'WIP'"></item-list>
     <item-list [titleColor]="'bg-blue-500'" [title]="'On Hold'"></item-list>
     <item-list [titleColor]="'bg-green-500'" [title]="'Complete'"></item-list>
-</div>
-<button (click)="getPlaylist()">load playlist</button>
+    <button mat-button (click)="getPlaylist()">load playlist</button>
 
-<playlist-selection [playlists]="playlists"></playlist-selection>
 <button mat-button (click)="openPlaylistSelection()">Select a playlist</button>
+</div>
+
