clean up styles + look

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,3 +4,6 @@
 @tailwind utilities;
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-typography h2 {
+    margin:0;
+}
