--- a/frontend/src/components/board/board.component.html
+++ b/frontend/src/components/board/board.component.html
@@ -1,8 +1,6 @@
-<div cdkDropListGroup class="shadow-xl columns-4 p-5 gap-1 bg-gray-100 rounded m-3 min-h-screen">
-    <item-list [canCreateNewItems]="true" [itemList]="originalItemList"  [titleColor]="'bg-red-500'" [title]="'Backlog'"></item-list>
-    <item-list [titleColor]="'bg-yellow-500'" [title]="'WIP'"></item-list>
-    <item-list [titleColor]="'bg-blue-500'" [title]="'On Hold'"></item-list>
-    <item-list [titleColor]="'bg-green-500'" [title]="'Complete'"></item-list>
+<div cdkDropListGroup class="shadow-xl columns-1 p-5 gap-1 bg-gray-100 rounded m-3 min-h-screen">
+    <item-list [canCreateNewItems]="true" [playlist]="selectedPlaylist"  [titleColor]="'bg-red-500'" [title]="'Backlog'"></item-list>
+
     <button mat-button (click)="getPlaylist()">load playlist</button>
 
 <button mat-button (click)="openPlaylistSelection()">Select a playlist</button>
