--- a/frontend/src/components/item-list/item-list.component.html
+++ b/frontend/src/components/item-list/item-list.component.html
@@ -1,5 +1,5 @@
 <div class="shadow-xl rounded-b-lg">
-    <h2 class="{{titleColor}}  font-bold leading-10 rounded-t-xl flex justify-center p-1">{{title}}</h2>
+    <h2 class="{{titleColor}} text-white font-bold leading-10 rounded-t-xl flex justify-center p-1">{{title}}</h2>
     <div cdkDropList [cdkDropListData]="itemList" (cdkDropListDropped)="drop($event)"
         class="min-h-[80vh] max-h-80 overflow-y-auto w-100 flex flex-col rounded-b-lg shadow-inner bg-slate-200 gap-2 p-3">
      
