--- a/frontend/src/components/playlist-selection/playlist-selection.component.html
+++ b/frontend/src/components/playlist-selection/playlist-selection.component.html
@@ -6,11 +6,11 @@
             <mat-card-header>
               <mat-card-title-group>
                 <mat-card-title>{{playlist.name}}</mat-card-title>
-                <mat-card-subtitle>{{playlist.name}}</mat-card-subtitle>
+                <mat-card-subtitle>{{playlist.description}}</mat-card-subtitle>
               </mat-card-title-group>
             </mat-card-header>
             <mat-card-content>
-                {{playlist.name}}
+                {{playlist.description}}
             </mat-card-content>
           </mat-card>
     </div></div>
