--- a/frontend/src/components/app/app.component.html
+++ b/frontend/src/components/app/app.component.html
@@ -1,1 +1,22 @@
+<mat-toolbar color="primary" *ngIf="spotifyAuthService.isLoggedIn()">
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>logout</mat-icon>
+          <span>Logout</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>change_circle</mat-icon>
+          <span>Select another playlist</span>
+        </button>
+      </mat-menu>
+    <span>Mixtune jamboree</span>
+    <span class="spacing"></span>
+    <button (click)="logout()" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>logout</mat-icon>
+    </button>
+  </mat-toolbar>
+   
 <router-outlet></router-outlet>
