--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -1,1 +1,18 @@
-<button mat-button (click)="loginToSpotify()">Login to spotify</button>
+
+<div class="flex flex-col items-center min-h-[100vh] mainContent">
+    <div class="text-8xl text-white">Welcome to <span class="waviy">
+        <span style="--i:1">M</span>
+        <span style="--i:2">I</span>
+        <span style="--i:3">X</span>
+        <span style="--i:4">T</span>
+        <span style="--i:5">U</span>
+        <span style="--i:6">N</span>
+        <span style="--i:7">E</span>
+     
+     
+    </span> jamboree</div>
+   
+    <p class="text-5xl text-white">Log in to spotify to continue !</p>
+
+    <button  mat-raised-button (click)="loginToSpotify()">Login to spotify</button>
+</div>
