allow no auth login, backend advancements

--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -14,5 +14,13 @@
    
     <p class="text-5xl text-white">Log in to spotify to continue !</p>
 
-    <button  mat-raised-button (click)="loginToSpotify()">Login to spotify</button>
+    <div class="pb-3">
+        <button  mat-raised-button (click)="loginToSpotify()">Login to spotify</button>
+    </div>
+    
+
+    <p class="text-5xl text-white">Or</p>
+
+
+    <button  mat-raised-button (click)="loginToSpotifyNoAccount()">Proceed with no account</button>
 </div>
